--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
+a {
+  text-decoration: none;
+}
+
+.wrapper {
+  width: 80%;
+  margin: 50px auto;
+
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.navLinks a{
+  padding: 5px;
+  font-size: 1.1em;
+}
+
+.logo {
+  font-size: 1.5em;
+}
+
  ul li {
    display: inline;
    padding: 10px 2px;
