--- a/styles.css
+++ b/styles.css
@@ -226,39 +226,46 @@ nav #menu li a {
 }
 
 
-/* FOOTER */
+/* ---FOOTER--- */
 footer {
   height: 300px;
   background-color: #000;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
 }
 
-.top {
-  text-align: center;
-}
-
-.top a{
-  color: #eee;
-  text-transform: uppercase;
-}
-
-.top:hover a{
+footer a:hover {
   text-decoration: none;
-  opacity: .5;
 }
 
-.siteLink {
-  text-align: center;
-}
-
-.siteLink li{
-  text-align: center;
-  display: inline-block;
+/* Left side of Footer */
+.footerLeft {
 
 }
 
-.siteLink a {
-  padding: 10px;
-  color: #ccc;
+.footerLeft p {
+  font-size: 1.1em;
+  letter-spacing: 1px;
+}
+
+.footerLeft a {
+  color: #eee;
+  letter-spacing: .4px;
+}
+
+.footerLeft li {
+  padding-top: 5px;
+}
+
+
+
+.footerRight {
+
+}
+
+.facebook {
+  color: #fff;
 }
 
 
